--- a/spinwheelapp/templates/base.html
+++ b/spinwheelapp/templates/base.html
@@ -6,12 +6,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css');
+
+      
       canvas {
         max-width: 100%;
         height: auto;
         display: block;
         margin: auto;
       }
+      
+
+      body{
+        
+        background-color: #f8f9fa;;
+      }
+      
     </style>
     
     {% block extra_head %}{% endblock %}
